Optimisation du header, vidéo et validation du formulaire
Ajout du header.php pour éviter la répétition du code.
Correction de l'affichage du header et du logo.
Vidéo en arrière-plan avec scroll fonctionnel.
Validation du formulaire (nom, prénom, email).
Optimisation du CSS et suppression des marges inutiles.

--- a/style-log.css
+++ b/style-log.css
@@ -8,7 +8,7 @@ body {
 }
 
 header {
-    background-color:#440e0a  ;
+    background-color:#000000  ;
     padding: 1em;
 
     border : 15em;
@@ -95,7 +95,7 @@ input[type="text"] {
 
 
 .logo {
-    height: 6em; /* Taille ajustable */
+    height: 7em; /* Taille ajustable */
     width: auto;  /* Garde les proportions */
 }
 
