--- a/style_accueil.css
+++ b/style_accueil.css
@@ -2,7 +2,7 @@
 
 /* Conteneur de la vidéo */
 .video-container {
-    position: fixed; /* La vidéo reste en arrière-plan */
+    position: relative; 
    
     left: 0;
     width: 100vw; /* Prend toute la largeur */
@@ -25,3 +25,35 @@
     width: auto;  /* Garde les proportions */
 }
 
+
+.conteneur {
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 20px;
+}
+
+.carte {
+    width: 250px;
+    height: 350px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 10px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+.carte img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: opacity 0.3s ease;
+}
+//opacity: 0; garde l’image en place mais invisible, ce qui permet une transition fluide.
+.carte img.survol {
+    opacity: 0;
+}
