Ajout de la page panier
+Ajout de la page panier.php avec un code PHP qui récupère les produits sélectionnés depuis la page produits.php, puis les affiche dans le panier avec l’image et le prix.
Modification de la couleur de fond de la page d'inscription.
Intégration d’un footer prédéfini.

--- a/css/produits.css
+++ b/css/produits.css
@@ -1,10 +1,9 @@
 body {
     font-family: Arial, sans-serif;
-    background: linear-gradient(to bottom, #f4c2c2, #e9967a); /* Dégradé rose saumon */
+    background: linear-gradient(to bottom, #000000, #3b0021); /* Dégradé rose saumon */
     color: white;
     text-align: center;
-    margin: 0;
-    padding: 20px;
+
 }
 
 h1 {
