--- a/css/Entete.css
+++ b/css/Entete.css
@@ -2,45 +2,39 @@ body {
     font-family: 'Times New Roman', Times, serif;
     color: #fff;
     margin: 0;
- 
-
 }
+
 .logo {
-    height: 7em; /* Taille ajustable */
+    height: 6em; /* Taille ajustable */
     width: auto;  /* Garde les proportions */
 }
 
 header {
-    background-color:#000000  ;
+    background-color: #000000;
     padding: 1em;
+    margin: 0;
+    border: none; /* supprime le "border: 15em" qui crée des bugs */
+}
 
-    border : 15em;
-
-    
+.conteneur-entete {
+    display: flex;
+    justify-content: space-between; /* logo à gauche, menu à droite */
+    align-items: center;
 }
 
 nav ul {
+    display: flex;
     list-style: none;
-   
-    border: 100rem;
+    padding: 0;
+    margin: 0;
 }
 
 nav ul li {
-    display: inline;
-    margin:  4rem;
+    margin: 0 20px;
 }
 
 nav ul li a {
     color: #f5f5f5;
-    text-decoration: none;
-    font-weight: bold;
-}
-.nav-links li {
-    margin: 0 15px;
-}
-
-.nav-links li a {
-    color: #5d001e;
     text-decoration: none;
     font-weight: bold;
 }
