Authentification affichage dynamique
+j'ajouter l'authentification d'un utilisateur qui à déjà crée un compte
ainsi je lui donner seulement l'accès à la page panier et à la page produits puis j'affiche son nom dans le header une fois qu'il est authentifié

--- a/css/Entete.css
+++ b/css/Entete.css
@@ -38,3 +38,16 @@ nav ul li a {
     text-decoration: none;
     font-weight: bold;
 }
+.droite {
+    margin-left: auto;
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+
+.droite a, .droite .utilisateur {
+    color: #f5f5f5;
+    font-family: 'Times New Roman', Times, serif;
+    text-decoration: none;
+    font-weight: bold;
+}
